--- a/styles.css
+++ b/styles.css
@@ -107,12 +107,16 @@
     /* scale: 0.6; */
     height:750px;
     width:421px;
+    z-index: 2;
 }
 
 @media (max-width:1000px) {
     .bottle{
         height: 500px;
         width: 281px;
+    }
+    .pa{
+        font-size:48px;
     }
 }
 
